force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/clofor_com_cfs__FacilityCostBuilding__c.object-meta.xml
<CustomObject>
    <label>Facility Cost</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>FACILITY COST BUILDING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>