force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__AmountPurchasingIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPurchasingIncludeTaxLocal__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceId__r.clofor_com_cfs__AmountIncludedTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PURCHASING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>