force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__AmountPurchasingIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPurchasingIncludeTaxUSD__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceId__r.clofor_com_cfs__AmountIncludedTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PURCHASING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>