force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__CostCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CostCategory__c</fullName>
    <label>COST CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__FacilityFixedCost</valueSetName>
    </valueSet>
</CustomField>