force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__FacilityCostName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityCostName__c</fullName>
    <label>FACILITY COST NAME</label>
    <type>TextArea</type>
</CustomField>