force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__FacilityID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityID__c</fullName>
    <label>FACILITY ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Facility__c.clofor_com_cfs__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipName>FacilityCostBuilding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>