force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__MinCBMCostBasedOnMaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MinCBMCostBasedOnMaxCapacity__c</fullName>
    <label>MIN COST BASED ON MAX CAPACITY(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>