force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__MinKGCostBasedOnMaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MinKGCostBasedOnMaxCapacity__c</fullName>
    <label>MIN COST BASED ON MAX CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>