force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__NumberOfUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfUnit__c</fullName>
    <label>NUMBER OF UNIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>