force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__PurchasingInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>clofor_com_cfs__PurchasingInvoice__c</referenceTo>
    <relationshipLabel>FACILITY COST BUILDING</relationshipLabel>
    <relationshipName>FacilityCostBuilding</relationshipName>
    <type>Lookup</type>
</CustomField>