force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/fields/clofor_com_cfs__UnitCostPerMonth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitCostPerMonth__c</fullName>
    <label>UNIT COST PER MONTH</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>