force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/recordTypes/clofor_com_cfs__FixedCost.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FixedCost</fullName>
    <active>true</active>
    <label>Fixed Cost</label>
</RecordType>