force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/recordTypes/clofor_com_cfs__VariableCost.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__VariableCost</fullName>
    <active>true</active>
    <label>Variable Cost</label>
</RecordType>