force-app/main/default/objects/clofor_com_cfs__FacilityCostBuilding__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__FacilityCostName__c</columns>
    <columns>clofor_com_cfs__FacilityID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__TotalCostPerMonth__c</columns>
    <columns>clofor_com_cfs__FacilityMaxCapacityCBM__c</columns>
    <columns>clofor_com_cfs__FacilityMaxCapacityKG__c</columns>
    <columns>clofor_com_cfs__MinCBMCostBasedOnMaxCapacity__c</columns>
    <columns>clofor_com_cfs__MinKGCostBasedOnMaxCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>